# curve-rewards-manager

./: .gitignore  README.md  deployed-arbitrum-main.json  deployed-optimism-main.json  network-config.yaml  package.json  pyproject.toml
contracts/: RewardsManager.vy
contracts/test_helpers/: LiquidityGaugeMock.vy
scripts/: deploy.py
tests/: conftest.py  test_acceptance.py  test_accetance.py  test_happy_path.py  test_manager.py  test_recover.py
utils/: config.py  config_arbitrum.py  config_optimism.py
