[tool.poetry]
name = "curve-rewards-manager"
version = "0.2.0"
description = "Curve liquidity gauge manager"
authors = ["bulbozaur <info.lido.fi>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"  
eth-brownie = "^1.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
